--- a/pronounce.yml
+++ b/pronounce.yml
@@ -2,7 +2,7 @@
 title: why are you looking at this
 icon: https://sadlynotsappho.dev/pfp.png
 name: Skye
-age: SadlyNotSappho
+age:  (SadlyNotSappho)
 pronouns:
   - "she/her"
 contacts:
